Begin inline collection api docs
