# aleph/views/collections_api.py
@@ -15,7 +15,6 @@ from aleph.logic.collections import delete_collection, update_collection
 from aleph.logic.processing import bulk_write
 from aleph.logic.util import collection_url
 from aleph.views.context import enable_cache
-from aleph.views.forms import CollectionCreateSchema, CollectionUpdateSchema
 from aleph.views.serializers import CollectionSerializer
 from aleph.views.util import get_db_collection, get_index_collection
 from aleph.views.util import require, parse_request, jsonify
@@ -26,12 +25,51 @@ blueprint = Blueprint('collections_api', __name__)
 
 @blueprint.route('/api/2/collections', methods=['GET'])
 def index():
+    """
+    ---
+    get:
+      summary: List collections
+      description: >-
+        Returns a list of collections matching a given query. Returns all the
+        collections accessible by a user if no query is given.
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                allOf:
+                - $ref: '#/components/schemas/QueryResponse'
+                properties:
+                  results:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Collection'
+      tags:
+      - Collection
+    """
     result = CollectionsQuery.handle(request)
     return CollectionSerializer.jsonify_result(result)
 
 
 @blueprint.route('/api/2/sitemap.xml')
 def sitemap():
+    """
+    ---
+    get:
+      summary: Get a sitemap
+      description: >-
+        Returns a site map for search engine robots. This lists each
+        published collection on the current instance.
+      responses:
+        '200':
+          description: OK
+          content:
+            text/xml:
+              schema:
+                type: object
+    """
     enable_cache(vary_user=False)
     collections = []
     for collection in Collection.all_authz(Authz.from_role(None)):
@@ -46,8 +84,28 @@ def sitemap():
 
 @blueprint.route('/api/2/collections', methods=['POST', 'PUT'])
 def create():
+    """
+    ---
+    post:
+      summary: Create a collection
+      description: Create a collection with the given metadata
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CollectionCreate'
+      tags:
+        - Collection
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Collection'
+    """
     require(request.authz.logged_in)
-    data = parse_request(CollectionCreateSchema)
+    data = parse_request('CollectionCreate')
     sync = get_flag('sync')
     collection = create_collection(data, request.authz, sync=sync)
     return CollectionSerializer.jsonify(collection)
@@ -55,6 +113,29 @@ def create():
 
 @blueprint.route('/api/2/collections/<int:collection_id>', methods=['GET'])
 def view(collection_id):
+    """
+    ---
+    get:
+      summary: Get a collection
+      description: Return the collection with id `collection_id`
+      parameters:
+      - description: The collection ID.
+        in: path
+        name: collection_id
+        required: true
+        schema:
+          minimum: 1
+          type: integer
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Collection'
+      tags:
+      - Collection
+    """
     collection = get_index_collection(collection_id)
     return CollectionSerializer.jsonify(collection)
 
@@ -62,7 +143,7 @@ def view(collection_id):
 @blueprint.route('/api/2/collections/<int:collection_id>', methods=['POST', 'PUT'])  # noqa
 def update(collection_id):
     collection = get_db_collection(collection_id, request.authz.WRITE)
-    data = parse_request(CollectionUpdateSchema)
+    data = parse_request('CollectionUpdate')
     sync = get_flag('sync')
     collection.update(data, request.authz)
     db.session.commit()
@@ -136,6 +217,25 @@ def cancel(collection_id):
 
 @blueprint.route('/api/2/collections/<int:collection_id>', methods=['DELETE'])
 def delete(collection_id):
+    """
+    ---
+    delete:
+      summary: Delete a collection
+      description: Delete the collection with id `collection_id`
+      parameters:
+      - description: The collection ID.
+        in: path
+        name: collection_id
+        required: true
+        schema:
+          minimum: 1
+          type: integer
+      responses:
+        '204':
+          description: No Content
+      tags:
+        - Collection
+    """
     collection = get_db_collection(collection_id, request.authz.WRITE)
     sync = get_flag('sync', default=True)
     delete_collection(collection, sync=sync)
